--- a/templates/eks.yaml
+++ b/templates/eks.yaml
@@ -17,13 +17,13 @@ Parameters:
     Type: String
     Default: iwasa-eks
     Description: ""
+  NodeGroupName:
+    Type: String
+    Default: iwasa-node-group
+    Description: ""
   KeyPair:
     Description: ""
     Type: AWS::EC2::KeyPair::KeyName
-  NodeImageId:
-    Type: AWS::EC2::Image::Id
-    Description: ""
-    Default: ami-06098fd00463352b6
   NodeInstanceType:
     Description: ""
     Type: String
@@ -33,6 +33,10 @@ Parameters:
     Description: ""
     Default: 2
   NodeAutoScalingGroupMaxSize:
+    Type: Number
+    Description: ""
+    Default: 2
+  NodeAutoScalingGroupDesiredSize:
     Type: Number
     Description: ""
     Default: 2
@@ -142,7 +146,7 @@ Resources:
   ControlPlaneSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: ""
+      GroupDescription: "ControlPlaneSecurityGroup"
       VpcId: !Ref VPC
   EKSRole:
     Type: AWS::IAM::Role
@@ -159,38 +163,26 @@ Resources:
         - arn:aws:iam::aws:policy/AmazonEKSServicePolicy
       RoleName: eks-cluster-role
 
-  NodeGroup:
-    Type: AWS::AutoScaling::AutoScalingGroup
+  EKSNodeGroup:
+    Type: AWS::EKS::Nodegroup
     Properties:
-      DesiredCapacity: !Ref NodeAutoScalingGroupMaxSize
-      LaunchConfigurationName: !Ref NodeLaunchConfig
-      MinSize: !Ref NodeAutoScalingGroupMinSize
-      MaxSize: !Ref NodeAutoScalingGroupMaxSize
-      VPCZoneIdentifier:
+      AmiType: AL2_x86_64
+      CapacityType: ON_DEMAND
+      ClusterName: !Ref EKSCluster
+      DiskSize: 20
+      InstanceTypes: 
+        - !Ref NodeInstanceType
+      NodegroupName: !Sub ${NodeGroupName}
+      NodeRole: !GetAtt NodeInstanceRole.Arn
+      RemoteAccess:
+        Ec2SshKey: !Ref KeyPair
+      ScalingConfig:
+        DesiredSize: !Ref NodeAutoScalingGroupDesiredSize
+        MaxSize: !Ref NodeAutoScalingGroupMinSize
+        MinSize: !Ref NodeAutoScalingGroupMaxSize
+      Subnets:
         - !Ref PublicSubnet1
         - !Ref PublicSubnet2
-  NodeLaunchConfig:
-    Type: AWS::AutoScaling::LaunchConfiguration
-    Properties:
-      AssociatePublicIpAddress: true
-      IamInstanceProfile: !Ref NodeInstanceProfile
-      ImageId: !Ref NodeImageId
-      InstanceType: !Ref NodeInstanceType
-      KeyName: !Ref KeyPair
-      SecurityGroups:
-      - !Ref NodeSecurityGroup
-      BlockDeviceMappings:
-        - DeviceName: /dev/xvda
-          Ebs:
-            VolumeSize: 20
-            VolumeType: gp2
-            DeleteOnTermination: true
-  NodeInstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      Path: "/"
-      Roles:
-      - !Ref NodeInstanceRole
   NodeInstanceRole:
     Type: AWS::IAM::Role
     Properties:
@@ -206,19 +198,8 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
-        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
-  NodeSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for Node.
-      VpcId:
-        !Ref VPC
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 0
-          ToPort: 65535
-          CidrIp: 0.0.0.0/0
+        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
 
 Outputs:
   CliStep1:
